--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,120 +1,113 @@
-* {
-    box-sizing: border-box;
-  }
-  
-  body {
-    background-color: #fff;
-    font-family: "Montserrat", sans-serif;
-    color: #2e2f42;
-  }
-  
-  /* Basic */
-  ul,
-  ol {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-  }
-  
-  a {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  object-fit: cover;
+}
+
+a {
     text-decoration: none;
     cursor: pointer;
-  }
+}
   
-  h1,
-  і h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-    margin: 0;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-  }
-  
-  /* ================ loader ================== */
-  
-  .loader {
-    position: relative;
-    height: 200px;
-    width: 200px;
-    border-bottom: 3px solid #ff3d00;
-    box-sizing: border-box;
-    animation: drawLine 4s linear infinite;
-  }
-  
-  .loader:before {
-    content: "";
-    position: absolute;
-    left: calc(100% + 14px);
-    bottom: -6px;
-    width: 16px;
-    height: 100px;
-    border-radius: 20px 20px 50px 50px;
-    background-repeat: no-repeat;
-    background-image: linear-gradient(#ff3d00 6px, transparent 0),
-      linear-gradient(45deg, rgba(0, 0, 0, 0.02) 49%, white 51%),
-      linear-gradient(315deg, rgba(0, 0, 0, 0.02) 49%, white 51%),
-      linear-gradient(to bottom, #ffffff 10%, #ff3d00 10%, #ff3d00 90%, #ffffff 90%);
-    background-size: 3px 3px, 8px 8px, 8px 8px, 16px 88px;
-    background-position: center bottom, left 88px, right 88px, left top;
-    transform: rotate(25deg);
-    animation: pencilRot 4s linear infinite;
-  }
-  
-  @keyframes drawLine {
-  
-    0%,
-    100% {
-      width: 0px
-    }
-  
-    45%,
-    55% {
-      width: 200px
-    }
-  }
-  
-  @keyframes pencilRot {
-  
-    0%,
-    45% {
-      bottom: -6px;
-      left: calc(100% + 14px);
-      transform: rotate(25deg);
-    }
-  
-    55%,
-    100% {
-      bottom: -12px;
-      left: calc(100% + 16px);
-      transform: rotate(220deg);
-    }
-  }
-  
-  /* ======================================= */
-  
-  .section {
+/* ================ loader ================== */
+
+.loader-container {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    max-width: 100%;
-    padding: 72px 150px;
+    
+}
+
+
+.loader {
+  position: relative;
+  height: 200px;
+  width: 200px;
+  border-bottom: 3px solid #ff3d00;
+  box-sizing: border-box;
+  animation: drawLine 4s linear infinite;
+}
+
+.loader:before {
+  content: "";
+  position: absolute;
+  left: calc(100% + 14px);
+  bottom: -6px;
+  width: 16px;
+  height: 100px;
+  border-radius: 20px 20px 50px 50px;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(#ff3d00 6px, transparent 0),
+    linear-gradient(45deg, rgba(0, 0, 0, 0.02) 49%, white 51%),
+    linear-gradient(315deg, rgba(0, 0, 0, 0.02) 49%, white 51%),
+    linear-gradient(to bottom, #ffffff 10%, #ff3d00 10%, #ff3d00 90%, #ffffff 90%);
+  background-size: 3px 3px, 8px 8px, 8px 8px, 16px 88px;
+  background-position: center bottom, left 88px, right 88px, left top;
+  transform: rotate(25deg);
+  animation: pencilRot 4s linear infinite;
+}
+
+@keyframes drawLine {
+  0%, 100% {
+    width: 0px;
   }
+
+  45%, 55% {
+    width: 200px;
+  }
+}
+
+@keyframes pencilRot {
+  0%, 45% {
+    bottom: -6px;
+    left: calc(100% + 14px);
+    transform: rotate(25deg);
+  }
+
+  55%, 100% {
+    bottom: -12px;
+    left: calc(100% + 16px);
+    transform: rotate(220deg);
+  }
+}
+/* ======================================= */
   
-  .form-container {
+
+  .formCont {
     display: flex;
     margin: 0 auto;
+    
   }
   
   .form {
     display: flex;
     gap: 8px;
     margin-bottom: 32px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .input {
